--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon index.js && browser-sync start --proxy 'muapi.dev' --files 'main.js'"
+    "watch": "nodemon index.js && browser-sync start --proxy 'muapi.localhost' --files 'index.js'"
   },
   "repository": {
     "type": "git",
