--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon index.js && browser-sync start --proxy 'muapi.localhost' --files 'index.js'",
-    "prod": "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
