--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon --exec babel-node server.js && browser-sync start"
+    "watch": "nodemon --exec babel-node server.js && browser-sync start",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
